...

    <!-- Common Actions & Labels -->
    <string name="common_save">Save</string>
    <string name="common_done">Done</string>
    <string name="common_reset">Reset</string>
    <string name="common_apply">Apply</string>
    <string name="common_shuffle">Shuffle</string>
    <string name="common_copy">Copy</string>
    <string name="common_share">Share</string>
    <string name="common_undo">Undo</string>
    <string name="common_import">Import</string>
    <string name="common_delete">Delete</string>
    <string name="common_export">Export</string>
...
    <string name="common_unknown_track">Unknown track</string>
    <string name="common_unknown_artist">Unknown artist</string>
    <string name="common_unknown_album">Unknown album</string>
    <string name="common_close">Close</string>
    <string name="common_add">Add</string>
    <string name="common_remove">Remove</string>
    <string name="common_play">Play</string>
    <string name="common_previous_track">Previous track</string>
    <string name="common_next_track">Next track</string>
    <string name="common_favorite">Favorite</string>
    <string name="common_pause">Pause</string>
    <string name="common_repeat">Repeat</string>
    <string name="common_options">Options</string>
...
